# rdk-x3-ai-waste-collector-boat

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_cn.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: demo.yaml  rdk_x3.yaml
docs/: architecture.md  deployment-rdk-x3.md  hardware-wiring.md  model.md  protocol.md
firmware/esp32_s3/: platformio.ini
firmware/esp32_s3/include/: board_config.h  protocol.h
firmware/esp32_s3/src/: main.cpp
firmware/esp32_s3/test/test_protocol/: test_protocol.cpp
models/: README.md  SHA256SUMS
scripts/: download_models.ps1  download_models.sh  rdk_model_smoke.py
src/lakerboat/: __init__.py  app.py  camera.py  cli.py  config.py  control.py  detection.py  runtime.py  schema.py  serial_link.py
tests/: test_app.py  test_control.py  test_runtime.py  test_serial_protocol.py  test_status_schema.py
ui/: Target-UI.html
