[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdk-x3-ai-waste-collector-boat"
version = "0.1.0"
description = "RDK X3 based AI autonomous surface waste collection boat for embedded system competition."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Laker Team" }
]
keywords = ["RDK X3", "YOLOv5", "ESP32-S3", "embedded", "robotics", "surface waste collection"]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "pyserial>=3.5"
]

[project.optional-dependencies]
vision = ["opencv-python-headless>=4.8"]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
lakerboat = "lakerboat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lakerboat = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
